[project]
name = "comfyui_doom"
description = "Play Doom in ComfyUI."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/ryanontheinside/ComfyUI_Doom"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_Doom"
Icon = ""
